--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "77c63988-6b11-4ec8-8ac6-7d38a052304b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
